Bug 1764606 - Expand nsDisplaySolidColor's bounds including the dynamic toolbar area. r=botond,tnikkel,geckoview-reviewers,owlish

Differential Revision: https://phabricator.services.mozilla.com/D168913