mobile/android/geckoview/src/androidTest/java/org/mozilla/geckoview/test/DynamicToolbarTest.kt
@@ -703,4 +703,45 @@ class DynamicToolbarTest : BaseSessionTest() {
             assertScreenshotResult(it.capturePixels(), reference)
         }
     }
+
+    @WithDisplay(height = SCREEN_HEIGHT, width = SCREEN_WIDTH)
+    @Test
+    fun backgroundAttachmentFixed() {
+        // Set ui.scrollbarFadeBeginDelay value to 0 to hide the overlayed scrollbars
+        // immediately.
+        sessionRule.setPrefsUntilTestEnd(
+            mapOf(
+                "ui.scrollbarFadeBeginDelay" to 0
+            )
+        )
+
+        val reference = getComparisonScreenshot(SCREEN_WIDTH, SCREEN_HEIGHT)
+
+        val dynamicToolbarMaxHeight = SCREEN_HEIGHT / 2
+        sessionRule.display?.run { setDynamicToolbarMaxHeight(dynamicToolbarMaxHeight) }
+
+        // Set active since setVerticalClipping call affects only for forground tab.
+        mainSession.setActive(true)
+
+        mainSession.loadTestPath(BaseSessionTest.TOUCH_ACTION_HTML_PATH)
+        mainSession.waitForPageStop()
+
+        // Specify the root background-color to match the reference image color and specify
+        // `background-attachment: fixed`.
+        mainSession.evaluateJS("document.documentElement.style.background = 'rgb(0, 128, 0) fixed'")
+
+        // Make the root element scrollable.
+        mainSession.evaluateJS("document.documentElement.style.height = '100vh'")
+
+        mainSession.flushApzRepaints()
+
+        // Simulate the dynamic toolbar being hidden by the scroll
+        sessionRule.display?.run { setVerticalClipping(-dynamicToolbarMaxHeight) }
+
+        mainSession.flushApzRepaints()
+
+        sessionRule.display?.let {
+            assertScreenshotResult(it.capturePixels(), reference)
+        }
+    }
 }
